cmake_minimum_required( VERSION 2.6 )
project( render-test-linux )

find_package( OpenThreads )
find_package( osg )
find_package( osgDB )
find_package( osgUtil )
find_package( osgViewer )

macro( config_project PROJNAME LIBNAME )
    include_directories( ${${LIBNAME}_INCLUDE_DIR} )
    target_link_libraries( ${PROJNAME} ${${LIBNAME}_LIBRARY} )
endmacro()

add_executable( render-test-linux main.cpp )
config_project( render-test-linux OPENTHREADS )
config_project( render-test-linux OSG )
config_project( render-test-linux OSGDB )
config_project( render-test-linux OSGUTIL )
config_project( render-test-linux OSGVIEWER )